[gd_scene load_steps=9 format=2]

[ext_resource path="res://juego/Naves/Player/player_orange.png" type="Texture" id=1]
[ext_resource path="res://juego/Naves/Player/MaterialFisico.tres" type="PhysicsMaterial" id=2]
[ext_resource path="res://juego/Naves/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://juego/Naves/Proyectiles/Canion.tscn" type="PackedScene" id=4]
[ext_resource path="res://juego/Naves/Proyectiles/Laser/LaserBeam2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://juego/Naves/Proyectiles/Laser/Trail2D.tscn" type="PackedScene" id=6]
[ext_resource path="res://juego/Naves/Player/Motor/MotorSFX.tscn" type="PackedScene" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 36.2431

[node name="Player" type="RigidBody2D"]
position = Vector2( 490.458, 234.434 )
z_index = 50
physics_material_override = ExtResource( 2 )
linear_damp = 1.0
angular_damp = 4.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.222733, 0 )
rotation = 1.5708
z_index = 40
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Canion" parent="." instance=ExtResource( 4 )]
position = Vector2( -1.31102, 0.187286 )

[node name="PuntoIzquierdo" parent="Canion" index="0"]
position = Vector2( 0, -33 )

[node name="PuntoDerecho" parent="Canion" index="1"]
position = Vector2( -0.749, 33 )

[node name="LaserBeam2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 38.9203, -0.128281 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -35.1264, -0.493347 )

[node name="Trail2D" parent="Position2D" instance=ExtResource( 6 )]
scale = Vector2( 1, 2.2 )
z_index = 39
is_emitting = true

[node name="MotorSFX" parent="." instance=ExtResource( 7 )]

[editable path="Canion"]
